--- a/seguros.html
+++ b/seguros.html
@@ -186,6 +186,7 @@
   </footer>
   <script src="js/plugins/simple-anime.js"></script>
   <script src="./js/script.js"></script>
+  <script src="js/perguntas.js"></script>
 </body>
 
 </html>
